--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <style name="FlixatToolbar" parent="ThemeOverlay.Material3.Toolbar.Surface">
         <item name="android:background">@color/md_theme_light_primaryContainer</item>
     </style>
+
     <style name="DetailToolbar" parent="ThemeOverlay.Material3">
-        <item name="colorControlNormal">@android:color/white</item>
+        <item name="colorControlNormal">?attr/colorOnPrimarySurface</item>
     </style>
 </resources>
