--- a/app/src/main/res/layout/rv_cast.xml
+++ b/app/src/main/res/layout/rv_cast.xml
@@ -8,52 +8,52 @@
             name="castMember"
             type="com.jlroberts.flixat.domain.model.CastMember" />
     </data>
-<androidx.constraintlayout.widget.ConstraintLayout
-    android:layout_width="120dp"
-    android:layout_height="200dp"
-    xmlns:tools="http://schemas.android.com/tools">
 
-    <androidx.appcompat.widget.AppCompatImageView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:scaleType="centerCrop"
-        android:id="@+id/profile_picture"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="120dp"
+        android:layout_height="200dp">
 
-    <com.google.android.material.textview.MaterialTextView
-        android:layout_width="0dp"
-        android:id="@+id/character"
-        android:text="@{castMember.character}"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:maxLines="2"
-        android:ellipsize="end"
-        app:layout_constraintVertical_bias="0"
-        android:gravity="center_horizontal"
-        tools:text="Tom Benedict Cumberbatch"
-        app:layout_constraintTop_toBottomOf="@id/profile_picture" />
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/profile_picture"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:scaleType="centerCrop"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <com.google.android.material.textview.MaterialTextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintTop_toBottomOf="@id/character"
-        android:maxLines="2"
-        android:ellipsize="end"
-        android:id="@+id/name"
-        app:layout_constraintVertical_bias="0"
-        android:gravity="center_horizontal"
-        tools:text="Tom Benedict Cumberbatch" />
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/character"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:ellipsize="end"
+            android:gravity="center_horizontal"
+            android:maxLines="2"
+            android:text="@{castMember.character}"
+            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/profile_picture"
+            app:layout_constraintVertical_bias="0"
+            tools:text="Tom Benedict Cumberbatch" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:ellipsize="end"
+            android:gravity="center_horizontal"
+            android:maxLines="2"
+            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/character"
+            app:layout_constraintVertical_bias="0"
+            tools:text="Tom Benedict Cumberbatch" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
