--- a/app/src/main/res/menu/toolbar_menu.xml
+++ b/app/src/main/res/menu/toolbar_menu.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:title="About"
-        android:id="@+id/about" />
+        android:id="@+id/about"
+        android:title="About" />
     <item
-        android:title="Preferences"
-        android:id="@+id/preferences" />
+        android:id="@+id/preferences"
+        android:title="Preferences" />
 </menu>
