--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -23,6 +23,11 @@
         <argument
             android:name="showBottomBar"
             android:defaultValue="true" />
+        <action
+            android:id="@+id/action_popularFragment_to_onboardingFragment"
+            app:destination="@id/onboardingFragment"
+            app:popUpTo="@id/onboardingFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/detailFragment"
@@ -107,6 +112,19 @@
         android:id="@+id/aboutFragment"
         android:name="com.jlroberts.flixat.ui.about.AboutFragment"
         android:label="About Flixat">
+        <argument
+            android:name="showBottomBar"
+            android:defaultValue="false" />
+    </fragment>
+    <fragment
+        android:id="@+id/onboardingFragment"
+        android:name="com.jlroberts.flixat.ui.onboarding.OnboardingFragment"
+        android:label="OnboardingFragment">
+        <action
+            android:id="@+id/action_onboardingFragment_to_popularFragment"
+            app:destination="@id/popularFragment"
+            app:popUpTo="@id/popularFragment"
+            app:popUpToInclusive="true" />
         <argument
             android:name="showBottomBar"
             android:defaultValue="false" />
