--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -25,6 +25,7 @@
     </data>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:id="@+id/detailFragmentLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -57,8 +58,8 @@
 
                 <com.airbnb.lottie.LottieAnimationView
                     android:id="@+id/no_network"
-                    android:layout_width="300dp"
-                    android:layout_height="300dp"
+                    android:layout_width="@dimen/detail_error_size"
+                    android:layout_height="@dimen/detail_error_size"
                     android:layout_above="@id/retry_button"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -92,8 +93,8 @@
 
             <com.airbnb.lottie.LottieAnimationView
                 android:id="@+id/loading"
-                android:layout_width="300dp"
-                android:layout_height="300dp"
+                android:layout_width="@dimen/detail_error_size"
+                android:layout_height="@dimen/detail_error_size"
                 android:layout_centerInParent="true"
                 android:visibility="@{viewModel.state.loading ? View.VISIBLE : View.GONE}"
                 app:lottie_autoPlay="true"
@@ -122,7 +123,7 @@
                 <RelativeLayout
                     android:id="@+id/backdrop_scrim"
                     android:layout_width="match_parent"
-                    android:layout_height="325dp"
+                    android:layout_height="@dimen/backdrop_height"
                     android:background="@drawable/gradient"
                     android:visibility="invisible"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -133,23 +134,22 @@
                     android:id="@+id/movie_image"
                     android:layout_width="120dp"
                     android:layout_height="200dp"
-                    android:layout_marginStart="16dp"
+                    android:layout_marginStart="@dimen/margin_normal"
                     android:contentDescription="@string/detail_movie_image_content_description"
                     android:scaleType="centerCrop"
                     app:layout_constraintBottom_toBottomOf="@id/backdrop"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/backdrop"
-                    app:movieImage="@{movie.posterPath.large}" />
+                    app:layout_constraintTop_toBottomOf="@id/backdrop" />
 
                 <com.google.android.material.textview.MaterialTextView
                     android:id="@+id/title_text"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginEnd="16dp"
-                    android:layout_marginBottom="8dp"
+                    android:layout_marginStart="@dimen/margin_normal"
+                    android:layout_marginEnd="@dimen/margin_normal"
+                    android:layout_marginBottom="@dimen/margin_small"
                     android:ellipsize="end"
                     android:maxLines="3"
                     android:text="@{movie.title}"
@@ -168,9 +168,9 @@
                     android:id="@+id/tagline"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginEnd="16dp"
+                    android:layout_marginStart="@dimen/margin_normal"
+                    android:layout_marginTop="@dimen/margin_small"
+                    android:layout_marginEnd="@dimen/margin_normal"
                     android:ellipsize="end"
                     android:maxLines="2"
                     android:text="@{movie.tagline}"
@@ -183,8 +183,8 @@
                     android:id="@+id/release_date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginStart="@dimen/margin_normal"
+                    android:layout_marginTop="@dimen/margin_small"
                     android:visibility="@{movie.releaseDate != null ? View.VISIBLE : View.INVISIBLE}"
                     app:date='@{movie.releaseDate}'
                     app:layout_constraintEnd_toEndOf="parent"
@@ -197,8 +197,8 @@
                     android:id="@+id/runtime"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginStart="@dimen/margin_small"
+                    android:layout_marginTop="@dimen/margin_small"
                     android:text='@{movie.runtime != null ? @string/runtime_format(movie.runtime) : ""}'
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0"
@@ -219,7 +219,7 @@
                         android:id="@+id/chip_group"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_margin="16dp"
+                        android:layout_margin="@dimen/margin_normal"
                         android:paddingEnd="24dp"
                         app:chipData="@{movie.genres}"
                         app:singleLine="true"
@@ -230,9 +230,9 @@
                     android:id="@+id/cast_label"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
+                    android:layout_marginStart="@dimen/margin_normal"
                     android:text="@string/detail_cast_label"
-                    android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
+                    style="@style/DetailLabelStyle"
                     android:visibility="@{movie.credits != null ? View.VISIBLE : View.GONE}"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/chipGroupLayout" />
@@ -241,12 +241,12 @@
                     android:id="@+id/cast_recycler"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
+                    android:layout_marginTop="@dimen/margin_normal"
                     android:clipToPadding="false"
                     android:nestedScrollingEnabled="false"
                     android:orientation="horizontal"
-                    android:paddingStart="8dp"
-                    android:paddingEnd="8dp"
+                    android:paddingStart="@dimen/margin_small"
+                    android:paddingEnd="@dimen/margin_small"
                     app:castData="@{movie.credits}"
                     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -257,8 +257,8 @@
                     android:id="@+id/trailer_button"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="48dp"
-                    android:layout_marginRight="48dp"
+                    android:layout_marginStart="@dimen/centered_button_margin"
+                    android:layout_marginEnd="@dimen/centered_button_margin"
                     android:text="@string/detail_view_trailer_btn_text"
                     android:visibility="gone"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -270,10 +270,10 @@
                     android:id="@+id/overview_label"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="32dp"
+                    android:layout_marginStart="@dimen/margin_normal"
+                    android:layout_marginTop="@dimen/margin_large"
                     android:text="@string/detail_overview_label"
-                    android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
+                    style="@style/DetailLabelStyle"
                     android:visibility="@{movie.overview != null ? View.VISIBLE : View.GONE}"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/trailer_button" />
@@ -282,7 +282,7 @@
                     android:id="@+id/overview_text"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_margin="16dp"
+                    android:layout_margin="@dimen/margin_normal"
                     android:text="@{movie.overview}"
                     android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -294,10 +294,10 @@
                     android:id="@+id/similar_label"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="32dp"
+                    android:layout_marginStart="@dimen/margin_normal"
+                    android:layout_marginTop="@dimen/margin_large"
                     android:text="@string/similar_label"
-                    android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
+                    style="@style/DetailLabelStyle"
                     android:visibility="@{movie.similar.size() == 0 ? View.GONE : View.VISIBLE}"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/overview_text" />
@@ -306,12 +306,12 @@
                     android:id="@+id/rv_similar"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
+                    android:layout_marginTop="@dimen/margin_normal"
                     android:clipToPadding="false"
                     android:nestedScrollingEnabled="false"
                     android:orientation="horizontal"
-                    android:paddingStart="8dp"
-                    android:paddingEnd="8dp"
+                    android:paddingStart="@dimen/margin_small"
+                    android:paddingEnd="@dimen/margin_small"
                     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -322,10 +322,10 @@
                     android:id="@+id/provider_label"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="32dp"
+                    android:layout_marginStart="@dimen/margin_normal"
+                    android:layout_marginTop="@dimen/margin_large"
                     android:text="@string/detail_watch_providers_label"
-                    android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
+                    style="@style/DetailLabelStyle"
                     android:visibility="@{movie.watchProviders.size() == 0 ? View.GONE : View.VISIBLE}"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/rv_similar" />
@@ -334,12 +334,12 @@
                     android:id="@+id/provider_recycler"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
+                    android:layout_marginTop="@dimen/margin_normal"
                     android:clipToPadding="false"
                     android:nestedScrollingEnabled="false"
                     android:orientation="horizontal"
-                    android:paddingStart="8dp"
-                    android:paddingEnd="8dp"
+                    android:paddingStart="@dimen/margin_small"
+                    android:paddingEnd="@dimen/margin_small"
                     android:visibility="@{movie.watchProviders.size() == 0 ? View.GONE : View.VISIBLE}"
                     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                     app:layout_constraintEnd_toEndOf="parent"
