--- a/app/src/main/res/layout/rv_watch_provider.xml
+++ b/app/src/main/res/layout/rv_watch_provider.xml
@@ -26,8 +26,8 @@
             android:id="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginTop="@dimen/margin_small"
+            android:layout_marginBottom="@dimen/margin_small"
             android:ellipsize="end"
             android:gravity="center_horizontal"
             android:maxLines="2"
