--- a/app/src/main/res/layout/fragment_nowplaying.xml
+++ b/app/src/main/res/layout/fragment_nowplaying.xml
@@ -46,8 +46,8 @@
 
                 <com.airbnb.lottie.LottieAnimationView
                     android:id="@+id/no_network"
-                    android:layout_width="300dp"
-                    android:layout_height="300dp"
+                    android:layout_width="@dimen/detail_error_size"
+                    android:layout_height="@dimen/detail_error_size"
                     android:layout_above="@id/retry_button"
                     app:lottie_autoPlay="true"
                     app:lottie_loop="true"
@@ -56,7 +56,7 @@
                 <com.google.android.material.textview.MaterialTextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="No internet connection, please retry."
+                    android:text="@string/no_internet_connection"
                     android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />
 
                 <com.google.android.material.button.MaterialButton
@@ -65,14 +65,14 @@
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
                     android:layout_marginTop="32dp"
-                    android:text="Retry" />
+                    android:text="@string/retry" />
 
             </androidx.appcompat.widget.LinearLayoutCompat>
 
             <com.airbnb.lottie.LottieAnimationView
                 android:id="@+id/loading"
-                android:layout_width="300dp"
-                android:layout_height="300dp"
+                android:layout_width="@dimen/detail_error_size"
+                android:layout_height="@dimen/detail_error_size"
                 android:layout_centerInParent="true"
                 android:visibility="@{viewModel.state.loading ? View.VISIBLE : View.GONE}"
                 app:lottie_autoPlay="true"
