--- a/app/src/main/res/layout/rv_cast.xml
+++ b/app/src/main/res/layout/rv_cast.xml
@@ -26,7 +26,7 @@
             android:id="@+id/character"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="@dimen/margin_small"
             android:ellipsize="end"
             android:gravity="center_horizontal"
             android:maxLines="2"
@@ -43,7 +43,7 @@
             android:id="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
+            android:layout_marginBottom="@dimen/margin_small"
             android:ellipsize="end"
             android:gravity="center_horizontal"
             android:maxLines="2"
