--- a/app/src/main/res/layout/rv_movie.xml
+++ b/app/src/main/res/layout/rv_movie.xml
@@ -12,7 +12,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp">
+        android:layout_margin="@dimen/margin_small">
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/movie_image"
