--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -23,19 +23,24 @@
 
         <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
 
-            <LinearLayout
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:layout_height="match_parent"
+                android:paddingBottom="@dimen/margin_small"
+                android:clipToPadding="false">
 
                 <androidx.cardview.widget.CardView
+                    android:id="@+id/about_flixat_card"
                     android:layout_width="match_parent"
-                    android:layout_height="100dp"
+                    android:layout_height="@dimen/about_card_height"
                     android:layout_margin="@dimen/margin_small"
-                    app:cardCornerRadius="8dp"
+                    app:cardCornerRadius="@dimen/standard_corner_radius"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:cardElevation="5dp">
 
                     <LinearLayout
@@ -61,10 +66,14 @@
                 </androidx.cardview.widget.CardView>
 
                 <androidx.cardview.widget.CardView
+                    android:id="@+id/tmdb_card"
                     android:layout_width="match_parent"
-                    android:layout_height="100dp"
+                    android:layout_height="@dimen/about_card_height"
                     android:layout_margin="@dimen/margin_small"
-                    app:cardCornerRadius="8dp"
+                    app:cardCornerRadius="@dimen/standard_corner_radius"
+                    app:layout_constraintTop_toBottomOf="@id/about_flixat_card"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:cardElevation="5dp">
 
                     <LinearLayout
@@ -91,10 +100,14 @@
                 </androidx.cardview.widget.CardView>
 
                 <androidx.cardview.widget.CardView
+                    android:id="@+id/watch_now_card"
                     android:layout_width="match_parent"
-                    android:layout_height="100dp"
+                    android:layout_height="@dimen/about_card_height"
                     android:layout_margin="@dimen/margin_small"
-                    app:cardCornerRadius="8dp"
+                    app:cardCornerRadius="@dimen/standard_corner_radius"
+                    app:layout_constraintTop_toBottomOf="@id/tmdb_card"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:cardElevation="5dp">
 
                     <LinearLayout
@@ -119,7 +132,7 @@
                             android:text="@string/about_just_watch_text" />
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
-            </LinearLayout>
+            </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.core.widget.NestedScrollView>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
